# JpegCompress

./: README.md
JpegCompressExample/: local.properties
JpegCompressExample/app/: build.gradle
JpegCompressExample/app/libs/: mjpegcompress-debug.aar  mjpegcompress-release.aar
JpegCompressExample/app/src/main/: AndroidManifest.xml
JpegCompressExample/app/src/main/java/github/com/compress/: MainActivity.java
JpegCompressExample/app/src/main/java/github/com/compress/view/: SquareFrameLayout.java  SquareImageView.java
JpegCompressExample/app/src/main/res/layout/: activity_main.xml  media_chooser_item.xml
JpegCompressExample/app/src/main/res/values/: strings.xml
JpegCompressLib/: local.properties  settings.gradle
JpegCompressLib/app/: build.gradle
JpegCompressLib/app/src/main/: AndroidManifest.xml
JpegCompressLib/app/src/main/res/layout/: activity_main.xml
JpegCompressLib/app/src/main/res/values/: strings.xml
JpegCompressLib/gradle/wrapper/: gradle-wrapper.properties
JpegCompressLib/mjpegcompress/: CMakeLists.txt  build.gradle
JpegCompressLib/mjpegcompress/src/androidTest/java/github/com/stoneimagecompress/util/: ExampleInstrumentedTest.java
JpegCompressLib/mjpegcompress/src/main/: AndroidManifest.xml
JpegCompressLib/mjpegcompress/src/main/cpp/: Android.mk  Application.mk  compressImage.cpp  github_com_stoneimagecompress_util_ImageUtil.h
JpegCompressLib/mjpegcompress/src/main/java/github/com/stoneimagecompress/util/: ImageUtil.java
JpegCompressLib/mjpegcompress/src/main/res/values/: strings.xml
(+3 files in other folders)
